# voting

./: stack.yaml  voting.cabal
src/: Voting.hs
