name:                voting
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/pseudonom/voting#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Easley
maintainer:          eric101111@gmail.com
copyright:           Eric Easley 2016
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Voting
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hashable
                     , lens
                     , QuickCheck
                     , unordered-containers
                     , extra
